<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--Desired grade Linear Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/textDesiredGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/Desired_grade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editDesiredGrade"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/Desired_grade_hint" />
    </LinearLayout>

    <!--Min Average required Linear Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textMinAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Min_avg"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/minAverage"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:hint="@string/Min_avg_hint" />

    </LinearLayout>

    <!--Current average required Linear Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textCurrAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Curr_avg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/currentAvg"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/Curr_avg_hint" />

    </LinearLayout>

    <!--Final percentage weight Linear Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textFinPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Fin_perc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/finalPercent"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/Fin_perc_hint" />

    </LinearLayout>

    <!-- Calculate button layout-->
    <Button
        android:id="@+id/calcButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/Calc_button"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- finalMessage text layout-->
    <TextView
        android:id="@+id/finalMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:text=""
        android:layout_gravity="center" />

    <!-- finalLetterGrade text layout-->
    <TextView
        android:id="@+id/finalLetterGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="72sp"
        android:textAllCaps="true"
        android:text=""
        android:layout_gravity="center" />
</LinearLayout>